--- a/client/styles/landing.css
+++ b/client/styles/landing.css
@@ -1,3 +1,25 @@
+#need-account,
+#forgot-password,
+#remember-me {
+  color: rgba(255, 255, 255, .8);
+  font-size: 14px;
+  font-weight: 300;
+  position: relative;
+  display: inline-block;
+  top: 7px;
+  opacity: 0;
+  line-height: 1.2;
+  padding: 0 6px;
+  cursor: pointer;
+}
+
+.login-subtext-container {
+  width: 100%;
+  height: 36px;
+  position: relative;
+  top: 5px;
+}
+
 .register-animation {
   position: relative;
   width: 500px;
@@ -13,7 +35,6 @@
   top: -10px;
   margin: auto;
 }
-
 
 p#register-copy {
   position: relative;
@@ -32,7 +53,6 @@ p#login-copy {
   font-weight: 300;
   opacity: 0;
 }
-
 
 p.landing-err-message {
   color: orange;
@@ -89,7 +109,6 @@ form.login-form {
   position: relative;
   margin: auto;
 }
-
 
 .fa.fa-facebook {
   position: absolute;
@@ -184,11 +203,18 @@ span.add-line-opacity {
   margin-top: 20%;
 }
 
-.logo-text {
+a.logo-text,
+a.logo-text:hover,
+a.logo-text:focus,
+a.logo-text:active {
   font-family: 'brandon_grotesquethin';
   font-size: 62px;
   color: white;
   opacity: 0;
+  cursor: pointer;
+  text-decoration: none;
+  position: relative;
+  top: -4px;
 }
 
 .landing-line {
@@ -202,7 +228,7 @@ span.add-line-opacity {
   font-family: 'brandon_grotesquethin';
   font-size: 36px;
   font-weight: 300;
-  color: rgba(255,255,255,.8);
+  color: rgba(255, 255, 255, .8);
   position: relative;
   top: -15px;
   bottom: 0;
