--- a/client/views/ngDialog/upload.html
+++ b/client/views/ngDialog/upload.html
@@ -10,7 +10,7 @@
     <form id='uploadForm' class='upload-form'>
       <div class="choose-file">
         <span id='choose-file-copy' style="cursor:pointer">Choose File</span>
-        <input id='file-upload-btn' type='file' upload='fileUpload' class='upload' />
+        <input id='file-upload-btn' type='file' ng-upload='fileUpload' class='upload' />
       </div>
       <a id='register' ng-click='footerCtrl.collectUpload();' class="btn btn-md btn-custom-landing">Upload</a>
     </form>
