--- a/server/views/index.html
+++ b/server/views/index.html
@@ -37,57 +37,9 @@
 </head>
 
 <body ng-app="RoomBaby">
-  <nav ng-class="{'show-nav-bar': ( showNavBar )}" ng-controller='NavBarCtrl as navBarCtrl' ng-init='navBarCtrl.registerEvents();' class="navbar navbar-custom navbar-static-top">
-    <div ng-class="{ 'body-overlay' : ( showOverlay ) }"></div>
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand">room baby</a>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right ">
-        <p class='welcome-username'>Welcome {{ user.username | capitalize }}!</p>
-        <li class="dropdown-toggle menu col-sm-pull-2">
-          <a class="dropdown-toggle" data-toggle="dropdown">
-            <img class="media-object img-circle-navbar" ng-src="{{user.profileImage | trusted}}">
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="">Settings</a></li>
-            <li><a href="">Change Password</a></li>
-            <li ng-click='navBarCtrl.dropdown("logout")'><a href="">Logout</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div ng-include src="'views/navbar.html'"></div>
   <div ui-view></div>
-  <div ng-class="{'show-footer': ( showFooter )}" ng-controller='FooterCtrl as footerCtrl' ng-init='footerCtrl.registerEvents();' class="navbar navbar-default navbar-fixed-bottom text-center">
-    <modal-dialog show='showOverlay' width='750px' height='60%'></modal-dialog>
-    <div ng-hide="showUpload" class="container">
-      <ul class="custom footer">
-        <li>
-          <div ng-click='footerCtrl.options("location")' class="btn-custom share-location">share location</div>
-        </li>
-        <li>
-          <div ng-click='footerCtrl.options("upload")' class="btn-custom share-file">share a file</div>
-        </li>
-        <li>
-          <div ng-click='footerCtrl.options("record")' class="btn-custom record-session">record session</div>
-        </li>
-        <li>
-          <div ng-click='footerCtrl.options("stop")' class="btn-custom record-session">stop recording</div>
-        </li>
-        <li>
-          <div ng-click='footerCtrl.options("disconnect")' class="btn-custom disconnect">disconnect</div>
-        </li>
-      </ul>
-    </div>
-  </div>
-  </div>
+  <div ng-include src="'views/footer.html'"></div>
   <!-- Grunt Build Vendor & Dev Scripts -->
   <script src="/build/vendor.min.js"></script>
   <script src="/scripts/lib/opentok-min.js"></script>
