--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -1,19 +1,19 @@
 <div ng-overlay ng-init='dashCtrl.initialize(); dashCtrl.registerEvents();'>
   <div id='dashboard-overlay' class='dashboard-overlay'>
     <i id='dash-overlay-exit-btn' class="fa fa-times"></i>
-    <div class='form-container'>
+    <div ng-error room-name='room.name' room-guest-email='room.guestEmail' room-start-date='room.startDate' class='form-container'>
       <form name="createRoom" id="create-a-room">
-        <p class='create-room-title-copy'>please enter a name for the room</p>
+        <p class='create-room-title-copy'>{{ createRoomTitle }}</p>
         <input id="create-room-title" ng-model="room.name" class="input-small" type="text" placeholder="Monday Morning Meeting">
-        <p class='create-room-email-copy'>the email address of your guest</p>
+        <p class='create-room-email-copy'>{{ createRoomEmail }}</p>
         <input id="create-room-email" ng-model="room.guestEmail" class="input-small" type="text" placeholder="guest@gmail.com">
-        <p class='create-room-start-copy'>and a start date for the session</p>
+        <p class='create-room-start-copy'>{{ createRoomDate }}</p>
         <div class"date-picker-container-custom">
-          <datepicker id='date-picker' ng-model="room.startDate" min-date="minDate" show-weeks="true"></datepicker>
+        <datetimepicker id="date-picker" data-ng-model="date.dates" data-on-set-time="dashCtrl.onTimeSet(newDate, oldDate)"></datetimepicker>
         </div>
         <div ng-click='dashCtrl.options($event, null);'id="on-create-room-submit" class="btn-custom create-room-submit-btn">Create Room</div>
       </form>
-    </div>
+    </div ng-error>
   </div>
   <div id='dashboard-container' class="container">
     <div class="row-block">
