completes ui and server-side handling for creating a room and sending an invite

--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -276,34 +276,28 @@ div.body-overlay {
 .btn-custom.create-room-submit-btn:focus {
   border: 1px solid #7EB1DC;
   width: 200px;
-  position: absolute;
+  position: relative;
   font-weight: 300;
   text-decoration: none;
   height: 30px;
   border-radius: 12px;
   text-align: center;
-  cursor: d
-  color: rgba(255, 255, 255, .9);
-  top: 500px;
+  cursor: pointer;
+  color: rgba(255,255,255,.9);
+  top: 31px;
   margin: auto;
   left: 0;
   right: 0;
   background: 0 0;
-  padding-top: 4px;
   z-index: 5;
-  opacity: 0;
-}
-
-.btn-custom.create-room-submit-btn.activate-create-room-btn {
-  -webkit-opacity: 1;
-  -moz-opacity: 1;
-  opacity: 1;
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   -ms-transition: all 1s ease;
   -o-transition: all 1s ease;
   transition: all 1s ease;
 }
+
+
 
 .btn-custom.create-a-broadcast,
 .btn-custom.create-a-broadcast:hover,
