--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -1,27 +1,43 @@
 <div ng-overlay ng-init='dashCtrl.initialize(); dashCtrl.registerEvents();'>
   <div id='dashboard-overlay' class='dashboard-overlay'>
     <i id='dash-overlay-exit-btn' class="fa fa-times"></i>
-    <div ng-invite name='room.name' guest-email='room.guestEmail' on-time-set='room.isTimeSet' class='form-container'>
+    <div ng-show="!(dashCtrl.isValidInput('form'))" ng-invite name='room.name' guest-email='room.guestEmail' on-time-set='room.isTimeSet' class='form-container'>
       <form name="createRoom" id="create-a-room">
-        <p class='create-room-title-copy'>{{ createRoomTitle }}</p>
+        <p ng-class='{ "error-color" : (!( dashCtrl.isValidInput("name") )) }' class='create-room-title-copy'>{{ createRoomTitle || 'please enter a name for the room' }} <span><i ng-class='{ "add-opacity" : ( dashCtrl.markChecked("name") ) }' class="fa fa-check"></i></span></p>
         <input name='roomName' id="create-room-title" ng-model="room.name" class="input-small" type="text" placeholder="Monday Morning Meeting">
-        <p class='create-room-email-copy'>{{ createRoomEmail }}</p>
+        <p ng-class='{ "error-color" : (!( dashCtrl.isValidInput("guestEmail") )) }' class='create-room-email-copy'>{{ createRoomEmail || 'the email address of your guest' }} <span><i ng-class='{ "add-opacity" : ( dashCtrl.markChecked("guestEmail") ) }' class="fa fa-check"></i></span></p>
         <input name='guestEmail' id="create-room-email" ng-model="room.guestEmail" class="input-small" type="text" placeholder="guest@gmail.com">
-        <p class='create-room-start-copy' ng-class='{ "on-time-set" : (isTimeSet) }'>{{ createRoomDate }}</p>
+        <p ng-show='dashCtrl.isValidInput("startDate")' class='create-room-start-copy'>Selected Start Time<span><i ng-class='{ "add-opacity" : ( dashCtrl.markChecked("startDate") ) }' class="fa fa-check"></i></span></p>
+        <p class='create-room-start-copy' ng-class='{ "on-time-set" : ( dashCtrl.isValidInput("startDate") ) }'>{{ createRoomDate || 'and a start date and start time for the session' }}</p>
         <div class "date-picker-container-custom">
           <datetimepicker id="date-picker" data-ng-model="date.dates" data-on-set-time="dashCtrl.onTimeSet(newDate, oldDate)"></datetimepicker>
         </div>
-        <div ng-class='{"activate-create-room-btn" : ( renderInviteBtn ) }' ng-click='dashCtrl.options($event, null);' id="on-create-room-submit" class="btn-custom create-room-submit-btn">Create Room</div>
       </form>
     </div ng-invite>
+    <div ng-show="dashCtrl.isValidInput('form')" class='confirmation-container'>
+      <p class="confirmation-header">Here's The Details of Your Room</p>
+      <p class="confirmation-sub-header">Click create room and we'll send you and your guest a reminder an hour before the session starts.</p>
+      <a ng-click='dashCtrl.onOptSelected($event);' href='' id='on-update-room-submit' class="confirmation-sub-header-update">or click to update</a>
+      <div class='confirmation-copy-container'>
+        <div class='confirmation-line'></div>
+        <p class='confirmation-copy'>Room Name</p>
+        <p class='confirmation-data'> {{ room.name }}</p>
+        <p class='confirmation-copy'>Guest Email</p>
+        <p class='confirmation-data'> {{ room.guestEmail }}</p>
+        <p class='confirmation-copy'>Starts On</p>
+        <p class='confirmation-data'> {{ createRoomDate }}</p>
+        <div class='confirmation-line'></div>
+        <div ng-click='dashCtrl.onOptSelected($event);' id="on-create-room-submit" class="btn-custom create-room-submit-btn">Create Room</div>
+      </div>
+    </div>
   </div>
   <div id='dashboard-container' class="container">
     <div class="row-block">
       <div id='opts-container' class='white-block'></div>
       <div class="center-block btn-opts-container">
         <div>
-          <div id="create-room-btn" ng-click='dashCtrl.options($event, null);' class="btn-custom create-a-room">create a room</div>
-          <div id="create-broadcast-btn" ng-click='dashCtrl.options($event, null);' class="btn-custom create-a-broadcast">create a broadcast</div>
+          <div id="create-room-btn" ng-click='dashCtrl.onOptSelected($event, null);' class="btn-custom create-a-room">create a room</div>
+          <div id="create-broadcast-btn" ng-click='dashCtrl.onOptSelected($event, null);' class="btn-custom create-a-broadcast">create a broadcast</div>
         </div>
         <div ng-show='showLoading' class='create-a-room-container'>
           <p class='room-option-copy'>creating room</p>
@@ -54,7 +70,7 @@
             </td>
             <td class='table-copy-status'>{{ obj.status }}</td>
             <td><i class="fa fa-refresh fa-spin"></i>
-              <a id='connect' name='connect' ng-click="dashCtrl.options($event, obj);" class="table-copy-connect">&nbsp;connect</a>
+              <a id='connect' name='connect' ng-click="dashCtrl.onOptSelected($event, obj);" class="table-copy-connect">&nbsp;connect</a>
             </td>
           </tr>
         </tbody>
