--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -283,7 +283,7 @@ div.body-overlay {
   border-radius: 12px;
   text-align: center;
   cursor: pointer;
-  color: rgba(255,255,255,.9);
+  color: rgba(255, 255, 255, .9);
   top: 31px;
   margin: auto;
   left: 0;
@@ -296,8 +296,6 @@ div.body-overlay {
   -o-transition: all 1s ease;
   transition: all 1s ease;
 }
-
-
 
 .btn-custom.create-a-broadcast,
 .btn-custom.create-a-broadcast:hover,
