marks spot where correct diff in time interval logs

--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -82,7 +82,7 @@
             </td>
             <td class='table-copy-status'>{{ obj.status }}</td>
             <td><i class="fa fa-refresh fa-spin"></i>
-              <a id='connect' name='connect' ng-click="dashCtrl.onOptSelected($event, obj);" class="table-copy-connect">&nbsp;connect</a>
+              <a id='connect' name='connect' ng-click="dashCtrl.onOptSelected($event, obj);" class="table-copy-connect">&nbsp;{{ obj.options }}</a>
             </td>
           </tr>
         </tbody>
