--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -105,8 +105,49 @@ div.body-overlay {
 }
 
 .btn.btn-md.members {
-  background: transparent;
-  color: rgba(0, 0, 0, .6);
+  color: white;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, .7);
+  border-radius: 35px;
+  position: relative;
+  left: -16px;
+  font-weight: 300;
+  width: 120px;
+  height: 35px;
+  top: -3px;
+}
+
+button#connect.btn.btn-md.members {
+  color: #efefef;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, .7);
+  border-radius: 35px;
+  position: relative;
+  left: -14px;
+  font-weight: 300;
+  width: 120px;
+  height: 35px;
+  padding-top: 4px;
+}
+
+button#details.btn.btn-md.members {
+  color: #efefef;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, .7);
+  border-radius: 35px;
+  position: relative;
+  left: -14px;
+  font-weight: 300;
+  width: 120px;
+  height: 35px;
+  padding-top: 4px;
+}
+
+.btn.btn-md.status {
+  color: white;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, .7);
+  border-radius: 35px;
 }
 
 .btn-custom-next,
