--- a/client/styles/date-picker-custom.css
+++ b/client/styles/date-picker-custom.css
@@ -3,9 +3,29 @@
   top: 175px;
   left: 0;
   right: 0;
-  width: 100%;
+  width: 375px;
   margin: auto;
   overflow: hidden;
+  height: 322px;
+}
+
+.datetimepicker table tr td.active,
+.datetimepicker table tr td.active.disabled,
+.datetimepicker table tr td.active.disabled:hover,
+.datetimepicker table tr td.active:hover {
+  background-color: #006dcc;
+  background-image: -moz-linear-gradient(top, #08c, #04c);
+  background-image: -ms-linear-gradient(top, #08c, #04c);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#08c), to(#04c));
+  background-image: -webkit-linear-gradient(top, #08c, #04c);
+  background-image: -o-linear-gradient(top, #08c, #04c);
+  background-image: linear-gradient(top, #08c, #04c);
+  background-repeat: repeat-x;
+  border-color: #04c #04c #002a80;
+  border-color: white;
+  filter: progid: DXImageTransform.Microsoft.gradient(enabled=false);
+  color: #fff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
 }
 
 .datetimepicker table tr td.future,
